force-app/main/default/objects/Record_Trail__c/Record_Trail__c.object-meta.xml
<CustomObject>
    <label>Record Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>