force-app/main/default/objects/Record_Trail__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Record Trails</relationshipLabel>
    <relationshipName>Record_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>