force-app/main/default/objects/Record_Trail__c/fields/Change_Log__c.field-meta.xml
<CustomField>
    <fullName>Change_Log__c</fullName>
    <label>Change Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>