force-app/main/default/objects/Record_Trail__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Record Trails</relationshipLabel>
    <relationshipName>Record_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>