force-app/main/default/objects/Record_Trail__c/fields/Flow_ID__c.field-meta.xml
<CustomField>
    <fullName>Flow_ID__c</fullName>
    <label>Flow ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>