force-app/main/default/objects/Record_Trail__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Record Trails</relationshipLabel>
    <relationshipName>Record_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>