force-app/main/default/objects/Record_Trail__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Record Trails</relationshipLabel>
    <relationshipName>Record_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>