force-app/main/default/objects/Record_Trail__c/fields/Link_to_Flow__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Flow__c</fullName>
    <formula>HYPERLINK(&quot;https://dfj.lightning.force.com/lightning/r/&quot; &amp; Flow_ID__c &amp; &quot;/view&quot;, &quot;Link to Flow&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Flow</label>
    <type>Text</type>
</CustomField>