force-app/main/default/objects/Record_Trail__c/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <formula>HYPERLINK(&quot;https://dfj.lightning.force.com/lightning/r/&quot; &amp; Record_ID__c &amp; &quot;/view&quot;, &quot;Link to Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Record</label>
    <type>Text</type>
</CustomField>