force-app/main/default/objects/Record_Trail__c/fields/Name_of_Flow__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Flow__c</fullName>
    <label>Name of Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>