force-app/main/default/objects/Record_Trail__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Record Trails</relationshipLabel>
    <relationshipName>Record_Trails</relationshipName>
    <type>Lookup</type>
</CustomField>