force-app/main/default/objects/Record_Trail__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <inlineHelpText>The ID of the Record that was changed</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>