force-app/main/default/objects/Record_Trail__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>IF(NOT(ISBLANK(Account__c)), &quot;Account&quot;,
    IF(NOT(ISBLANK(Lead__c)), &quot;Lead&quot;,
        IF(NOT(ISBLANK(Journal__c)), &quot;Journal&quot;,
            IF(NOT(ISBLANK(Order__c)), &quot;Order&quot;,
                IF(NOT(ISBLANK(Campaign__c)), &quot;Campaign&quot;,
                    IF(NOT(ISBLANK(Contact__c)), &quot;Contact&quot;, &quot;&quot;)
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>